--- a/src/BBSPicUploader/MainWindow.xaml
+++ b/src/BBSPicUploader/MainWindow.xaml
@@ -26,16 +26,15 @@
                 <Label Content="描述:" Height="28" HorizontalAlignment="Left" Margin="472,261,0,0" Name="lblDescription" VerticalAlignment="Top"  ToolTip="会显示在上传区里"/>
                 <TextBox Height="23" Margin="0,263,12,0" Name="txtDescription" ToolTip="会显示在上传区里" VerticalAlignment="Top" HorizontalAlignment="Right" Width="311" />
                 <Label Content="说明:" Height="28" HorizontalAlignment="Left" Margin="472,292,0,0" Name="lblText" VerticalAlignment="Top" ToolTip="会显示在正文图片下方" />
-                <TextBox Height="50" Margin="515,292,12,0" Name="txtText" ToolTip="会显示在正文图片下方" VerticalAlignment="Top" />
-                <Label Content="" Height="24" HorizontalAlignment="Left" Margin="472,347,0,0" Name="lblIndexAndCount" VerticalAlignment="Top" Width="222" />
-                <Button Content="上一张" Height="23" HorizontalAlignment="Left" Margin="700,348,0,0" Name="btnPrev" VerticalAlignment="Top" Width="60" Click="btnPrev_Click" />
-                <Button Content="下一张" Height="23" HorizontalAlignment="Right" Margin="0,348,12,0" Name="btnNext" VerticalAlignment="Top" Width="60" Click="btnNext_Click" />
-               
+                <TextBox Height="50" Margin="515,292,12,0" Name="txtText" ToolTip="会显示在正文图片下方" VerticalAlignment="Top" TextWrapping="WrapWithOverflow" />
+                <Button Content="下一张" Height="23" HorizontalAlignment="Right" Margin="0,348,198,0" Name="btnNext" VerticalAlignment="Top" Width="60" Click="btnNext_Click" />
+                <Button Content="上一张" Height="23" HorizontalAlignment="Left" Margin="515,348,0,0" Name="btnPrev" VerticalAlignment="Top" Width="60" Click="btnPrev_Click" />                
+                <Label Content="" Height="24" HorizontalAlignment="Left" Margin="646,348,0,0" Name="lblIndexAndCount" VerticalAlignment="Top" Width="180" />
             </Grid>
         </GroupBox>
         <GroupBox Header="状态" Height="65" HorizontalAlignment="Left" Margin="4,610,0,0" Name="groupState" VerticalAlignment="Top" Width="850" >
             <Grid>
-                <Button Content="上传发帖" Height="23" HorizontalAlignment="Left" Margin="12,9,0,0" Name="btnUpload" VerticalAlignment="Top" Width="60" Click="btnUpload_Click" />
+                <Button Content="上传发帖" Height="23" HorizontalAlignment="Left" Margin="12,10,0,0" Name="btnUpload" VerticalAlignment="Top" Width="60" Click="btnUpload_Click" />
                 <ProgressBar Height="20" Margin="78,12,198,0" Name="progressBar1" VerticalAlignment="Top" />
                 <Label Content="" Height="28" HorizontalAlignment="Right" Margin="0,8,12,0" Name="lblProgress" VerticalAlignment="Top" Width="180" />
             </Grid>
