--- a/trunk/src/BBSPicUploader/App.xaml
+++ b/trunk/src/BBSPicUploader/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="BBSPicUploader.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="LoginWindow.xaml">
+             StartupUri="LoginWindow.xaml" Startup="Application_Startup">
     <Application.Resources>
          
     </Application.Resources>
