--- a/trunk/src/BBSPicUploader/MainWindow.xaml
+++ b/trunk/src/BBSPicUploader/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="BBSPicUploader" Height="720" Width="880" WindowStartupLocation="CenterScreen">
     <Grid>
-        <Menu IsMainMenu="True">
+        <Menu IsMainMenu="True" Height="24" Margin="4, 0, 0,0" VerticalAlignment="Top" Background="White">
             <MenuItem Header="文件">
                 <MenuItem Header="退出" Click="MenuItem_Exit_Click"></MenuItem>
             </MenuItem>
@@ -18,28 +18,32 @@
                 <Label Content="标题：" Height="28" HorizontalAlignment="Left" Margin="187,12,0,0" Name="lblTitle" VerticalAlignment="Top" Grid.Column="1" />
                 <TextBox Height="23" Margin="239,12,12,0" Name="txtTitle" VerticalAlignment="Top" />
                 <Label Content="前言：" Height="28" HorizontalAlignment="Left" Margin="0,44,0,0" Name="lblPreface" VerticalAlignment="Top" Grid.Column="1" ToolTip="会显示在正文的最前面"  />
-                <TextBox Height="50" Margin="47,46,12,0" Name="txtPreface" VerticalAlignment="Top" Grid.Column="1" ToolTip="会显示在正文的最前面" />
+                <TextBox Height="50" Margin="47,46,12,0" Name="txtPreface" VerticalAlignment="Top" Grid.Column="1" ToolTip="会显示在正文的最前面" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" />
                 <Label Content="总结：" Height="28" HorizontalAlignment="Left" Margin="0,100,0,0" Name="lblSummery" VerticalAlignment="Top" ToolTip="会显示在正文的最后" Grid.Column="1" />
-                <TextBox Height="50" Margin="47,102,12,0" Name="txtSummary" VerticalAlignment="Top" Grid.Column="1" ToolTip="会显示在正文的最后" />
+                <TextBox Height="50" Margin="47,102,12,0" Name="txtSummary" VerticalAlignment="Top" Grid.Column="1" ToolTip="会显示在正文的最后" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" />
             </Grid>
         </GroupBox>
         <GroupBox Header="图片" Height="400" HorizontalAlignment="Left" Margin="4,210,0,0" Name="groupPic" VerticalAlignment="Top" Width="850">
             <Grid>
-                <ListBox Height="338" Margin="12,4,372,0" Name="listPics" VerticalAlignment="Top" SelectionChanged="listPics_SelectionChanged" />
-                <Button Content="添加" Height="23" HorizontalAlignment="Left" Margin="12,348,0,0" Name="btnAdd" VerticalAlignment="Top" Width="60" Click="btnAdd_Click" />
-                <Button Content="添加目录" Height="23" HorizontalAlignment="Left" Margin="78,348,0,0" Name="btnAddFolder" VerticalAlignment="Top" Width="60" Click="btnAddFolder_Click" />
-                <Button Content="移除" Height="23" HorizontalAlignment="Right" Margin="0,348,438,0" Name="btnRemove" VerticalAlignment="Top" Width="60" Click="btnRemove_Click" />
-                <Button Content="清空" Height="23" HorizontalAlignment="Right" Margin="0,348,372,0" Name="btnClear" VerticalAlignment="Top" Width="60" Click="btnClear_Click" />
-                <Grid Margin="472,6,6,131" Width="360" Height="240">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="117*" />
+                    <RowDefinition Height="260*" />
+                </Grid.RowDefinitions>
+                <ListBox Height="338" Margin="12,4,372,0" Name="listPics" VerticalAlignment="Top" SelectionChanged="listPics_SelectionChanged" Grid.RowSpan="2" />
+                <Button Content="添加" Height="23" HorizontalAlignment="Left" Margin="12,231,0,0" Name="btnAdd" VerticalAlignment="Top" Width="60" Click="btnAdd_Click" Grid.Row="1" />
+                <Button Content="添加目录" Height="23" HorizontalAlignment="Left" Margin="78,231,0,0" Name="btnAddFolder" VerticalAlignment="Top" Width="60" Click="btnAddFolder_Click" Grid.Row="1" />
+                <Button Content="移除" Height="23" HorizontalAlignment="Right" Margin="0,231,438,0" Name="btnRemove" VerticalAlignment="Top" Width="60" Click="btnRemove_Click" Grid.Row="1" />
+                <Button Content="清空" Height="23" HorizontalAlignment="Right" Margin="0,231,372,0" Name="btnClear" VerticalAlignment="Top" Width="60" Click="btnClear_Click" Grid.Row="1" />
+                <Grid Margin="472,6,6,131" Width="360" Height="240" Grid.RowSpan="2">
                     <Image Height="240" Name="imgPreview" Stretch="Uniform" VerticalAlignment="Center" HorizontalAlignment="Center" Width="360" />
                 </Grid>
-                <Label Content="描述:" Height="28" HorizontalAlignment="Left" Margin="472,261,0,0" Name="lblDescription" VerticalAlignment="Top"  ToolTip="会显示在上传区里"/>
-                <TextBox Height="23" Margin="0,263,12,0" Name="txtDescription" ToolTip="会显示在上传区里" VerticalAlignment="Top" HorizontalAlignment="Right" Width="311" />
-                <Label Content="说明:" Height="28" HorizontalAlignment="Left" Margin="472,292,0,0" Name="lblText" VerticalAlignment="Top" ToolTip="会显示在正文图片下方" />
-                <TextBox Height="50" Margin="515,292,12,0" Name="txtText" ToolTip="会显示在正文图片下方" VerticalAlignment="Top" TextWrapping="WrapWithOverflow" />
-                <Button Content="下一张" Height="23" HorizontalAlignment="Right" Margin="0,348,198,0" Name="btnNext" VerticalAlignment="Top" Width="60" Click="btnNext_Click" />
-                <Button Content="上一张" Height="23" HorizontalAlignment="Left" Margin="515,348,0,0" Name="btnPrev" VerticalAlignment="Top" Width="60" Click="btnPrev_Click" />                
-                <Label Content="" Height="24" HorizontalAlignment="Left" Margin="646,348,0,0" Name="lblIndexAndCount" VerticalAlignment="Top" Width="180" />
+                <Label Content="描述:" Height="28" HorizontalAlignment="Left" Margin="472,144,0,0" Name="lblDescription" VerticalAlignment="Top"  ToolTip="会显示在上传区里" Grid.Row="1" />
+                <TextBox Height="23" Margin="0,146,12,0" Name="txtDescription" ToolTip="会显示在上传区里" VerticalAlignment="Top" HorizontalAlignment="Right" Width="311" Grid.Row="1" TextWrapping="NoWrap" />
+                <Label Content="说明:" Height="28" HorizontalAlignment="Left" Margin="472,175,0,0" Name="lblText" VerticalAlignment="Top" ToolTip="会显示在正文图片下方" Grid.Row="1" />
+                <TextBox Height="50" Margin="515,175,12,0" Name="txtText" ToolTip="会显示在正文图片下方" VerticalAlignment="Top" TextWrapping="Wrap" Grid.Row="1" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" />
+                <Button Content="下一张" Height="23" HorizontalAlignment="Right" Margin="0,231,198,0" Name="btnNext" VerticalAlignment="Top" Width="60" Click="btnNext_Click" Grid.Row="1" />
+                <Button Content="上一张" Height="23" HorizontalAlignment="Left" Margin="515,231,0,0" Name="btnPrev" VerticalAlignment="Top" Width="60" Click="btnPrev_Click" Grid.Row="1" />                
+                <Label Content="" Height="24" HorizontalAlignment="Left" Margin="646,231,0,0" Name="lblIndexAndCount" VerticalAlignment="Top" Width="180" Grid.Row="1" />
             </Grid>
         </GroupBox>
         <GroupBox Header="状态" Height="65" HorizontalAlignment="Left" Margin="4,615,0,0" Name="groupState" VerticalAlignment="Top" Width="850" >
