--- a/src/BBSPicUploader/MainWindow.xaml
+++ b/src/BBSPicUploader/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="BBSPicUploader.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="BBSPicUploader" Height="720" Width="880" WindowStartupLocation="CenterScreen">
+        Title="BBSPicUploader" Height="720" Width="880" WindowStartupLocation="CenterScreen" ContentRendered="Window_ContentRendered">
     <Grid>
         <Menu IsMainMenu="True" Height="24" Margin="4, 0, 0,0" VerticalAlignment="Top" Background="White">
             <MenuItem Header="文件">
@@ -48,9 +48,10 @@
         </GroupBox>
         <GroupBox Header="状态" Height="65" HorizontalAlignment="Left" Margin="4,615,0,0" Name="groupState" VerticalAlignment="Top" Width="850" >
             <Grid>
-                <Button Content="上传发帖" Height="23" HorizontalAlignment="Left" Margin="12,10,0,0" Name="btnUpload" VerticalAlignment="Top" Width="60" Click="btnUpload_Click" />
-                <ProgressBar Height="20" Margin="78,12,198,0" Name="progressBar1" VerticalAlignment="Top" />
-                <Label Content="" Height="28" HorizontalAlignment="Right" Margin="0,8,12,0" Name="lblProgress" VerticalAlignment="Top" Width="180" />
+                <Button Content="上传" Height="23" HorizontalAlignment="Left" Margin="12,10,0,0" Name="btnUpload" VerticalAlignment="Top" Width="60" Click="btnUpload_Click" />
+                <ProgressBar Height="20" Margin="137,13,121,0" Name="progressBar1" VerticalAlignment="Top" />
+                <Label Content="" Height="28" HorizontalAlignment="Right" Margin="0,8,12,0" Name="lblProgress" VerticalAlignment="Top" Width="103" />
+                <CheckBox Content="发帖" Height="16" HorizontalAlignment="Left" Margin="90,14,0,0" Name="chkPost" VerticalAlignment="Top" />
             </Grid>
         </GroupBox>        
     </Grid>
