--- a/trunk/src/BBSPicUploader/LoginWindow.xaml
+++ b/trunk/src/BBSPicUploader/LoginWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="BBSPicUploader.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="BBSPicUploader" Height="240" Width="320" WindowStyle="SingleBorderWindow" WindowStartupLocation="CenterScreen" KeyUp="Window_KeyUp">
+        Title="BBSPicUploader" Height="240" Width="320" WindowStyle="SingleBorderWindow" WindowStartupLocation="CenterScreen" KeyUp="Window_KeyUp" ResizeMode="NoResize">
     <Grid>
         <Label Content="饮水思源" Height="44" HorizontalAlignment="Left" Margin="85,0,0,0" Name="lblBBS" VerticalAlignment="Top" Width="120" FontSize="28" />
         <Label Content="账号：" Height="28" HorizontalAlignment="Left" Margin="64,60,0,0" Name="lblUserName" VerticalAlignment="Top" />
