--- a/trunk/src/BBSPicUploader/MainWindow.xaml
+++ b/trunk/src/BBSPicUploader/MainWindow.xaml
@@ -1,14 +1,14 @@
 ﻿<Window x:Class="BBSPicUploader.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="BBSPicUploader" Height="720" Width="880" WindowStartupLocation="CenterScreen" ContentRendered="Window_ContentRendered">
+        Title="BBSPicUploader" Height="720" Width="880" WindowStartupLocation="CenterScreen" ContentRendered="Window_ContentRendered" ResizeMode="NoResize">
     <Grid>
         <Menu IsMainMenu="True" Height="24" Margin="4, 0, 0,0" VerticalAlignment="Top" Background="White">
             <MenuItem Header="文件">
                 <MenuItem Header="退出" Click="MenuItem_Exit_Click"></MenuItem>
             </MenuItem>
             <MenuItem Header="帮助">
-                <MenuItem Header="自动更新" Click="MenuItem_AutoUpdate_Click"></MenuItem>
+                <MenuItem Header="检查更新" Click="MenuItem_AutoUpdate_Click"></MenuItem>
             </MenuItem>
         </Menu>
         <GroupBox Header="基本" Height="185" HorizontalAlignment="Left" Margin="4,24,0,0" Name="groupBasic" VerticalAlignment="Top" Width="850">
