--- a/trunk/src/Update/MainWindow.xaml
+++ b/trunk/src/Update/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="BBSPicUploader.Update.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="BBSPicUploader 自动更新" Height="240" Width="360" WindowStartupLocation="CenterScreen" ContentRendered="Window_ContentRendered">
+        Title="BBSPicUploader 自动更新" Height="240" Width="360" WindowStartupLocation="CenterScreen" ContentRendered="Window_ContentRendered" ResizeMode="NoResize">
     <Grid>
         <Label Content="进度:" Height="28" HorizontalAlignment="Left" Margin="12,31,0,0" Name="label1" VerticalAlignment="Top" />
         <ProgressBar Height="20" HorizontalAlignment="Left" Margin="12,65,0,0" Name="progressBar1" VerticalAlignment="Top" Width="314" />
